# kuntur_detector_server

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-build.sh  main.py  pyproject.toml
src/: __init__.py
src/application/: __init__.py  use_cases.py
src/domain/: __init__.py  models.py  ports.py
src/infrastructure/: __init__.py  api.py  config.py  mock_threat_detector.py  static_files.py  threat_detector.py
tests/: conftest.py  test_models.py  test_structure.py  test_use_cases.py
ui/: index.html
